--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,1 +1,5 @@
-# Fichier de départ pour le 'build' de l'application wordpress
+FROM wordpress
+
+WORKDIR /var/www/html
+COPY simple-style.1.1.12/ ./wp-content/themes/simple-style.1.1.12/
+COPY code-prettify/ ./wp-content/plugins/code-prettify/
