--- a/.env
+++ b/.env
@@ -1,9 +1,17 @@
 DB_PORT=3307
 DB_ROOT_PASS=password
+
 WORDPRESS_DB_HOST=mabd
 WORDPRESS_DB_USER=wp
 WORDPRESS_DB_PASSWORD=password
+WP_DB_NAME=WP
+
 MYSQL_ROOT_PASSWORD=password 
 MYSQL_DATABASE=wp 
-MYSQL_USER=wp 
+MYSQL_USER=2151866 
 MYSQL_PASSWORD=password
+
+POSTGRES_USER=2151866
+POSTGRES_PASSWORD=password
+
+WP_PREFIX=2151866_
