--- a/.env
+++ b/.env
@@ -13,5 +13,12 @@ MYSQL_PASSWORD=password
 
 POSTGRES_USER=2151866
 POSTGRES_PASSWORD=password
+POSTGRES_PORT=5432
 
 WP_PREFIX=2151866_
+
+PMM_USER=admin
+PMM_PASSWORD=admin
+
+PGADMIN_DEFAULT_EMAIL=tp01@420-4d4.com
+PGADMIN_DEFAULT_PASSWORD=secret
