--- a/.env
+++ b/.env
@@ -20,5 +20,5 @@ WP_PREFIX=2151866_
 PMM_USER=admin
 PMM_PASSWORD=admin
 
-PGADMIN_DEFAULT_EMAIL=tp01@420-4d4.com
+PGADMIN_DEFAULT_EMAIL=tp01@4204d4.com
 PGADMIN_DEFAULT_PASSWORD=secret
