--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,6 +157,8 @@ services:
       - DB_PORT=${POSTGRES_PORT}
       - DB_USER=${POSTGRES_USER}
       - DB_PASSWORD=${POSTGRES_PASSWORD}
+    depends_on:
+      - postgres
     networks:
       - reseauPMM
   
