Fini pour de vrai vrai

--- a/.env
+++ b/.env
@@ -1,24 +1,20 @@
-DB_PORT=3307
-DB_ROOT_PASS=password
-
-WORDPRESS_DB_HOST=mabd
-WORDPRESS_DB_USER=wp
-WORDPRESS_DB_PASSWORD=password
+#WP
+WP_HOST=mabd
+WP_USER=wp
+WP_PASSWORD=password
 WP_DB_NAME=WP
 
+#Mariadb
 MYSQL_ROOT_PASSWORD=password 
 MYSQL_DATABASE=wp 
 MYSQL_USER=2151866 
 MYSQL_PASSWORD=password
-
+#Postgres
 POSTGRES_USER=2151866
 POSTGRES_PASSWORD=password
-POSTGRES_PORT=5432
-
-WP_PREFIX=2151866_
-
+#PMM
 PMM_USER=admin
-PMM_PASSWORD=admin
-
+PMM_PASS=admin
+#PGADMIN
 PGADMIN_DEFAULT_EMAIL=tp01@4204d4.com
 PGADMIN_DEFAULT_PASSWORD=secret
